appId: br.com.tradingplan.priceactionmaster
---
- launchApp:
    clearState: false

- assertVisible: "Price Action Master"
- tapOn: "Padrões de Candlestick"
- scroll
- back
- assertVisible: "Price Action Master"
